--- a/doc/software-manual.tex
+++ b/doc/software-manual.tex
@@ -1676,8 +1676,8 @@ Enables the use of weighted prediction in B slices.
 Sets the Weighted Prediction method to be used.
 \par
 \begin{tabular}{cp{0.45\textwidth}}
-  0 & Image DC based method with joint color component decision. \\
-  1 & Image DC based method with separate color component decision. \\
+  0 & Image DC based method with joint colour component decision. \\
+  1 & Image DC based method with separate colour component decision. \\
   2 & DC + Histogram refinement method (no clipping). \\
   3 & DC + Histogram refinement method (with clipping). \\
   4 & DC + Dual Histogram refinement method (with clipping). \\
