--- a/doc/software-manual.tex
+++ b/doc/software-manual.tex
@@ -1258,6 +1258,37 @@ Specify luma values to use for the luma to delta QP mapping instead of using def
 Specify DQP values to use for the luma to delta QP mapping instead of using default values. Default values are: -3, -2, -1, 0, 1, 2, 3, 4, 5, 6.
 \\
 
+\Option{WCGPPSEnable} &
+\Default{0} &
+Enable the WCG PPS modulation of the chroma QP, rather than the slice,
+which, unlike slice-level modulation, allows the deblocking process
+to consider the adjustment.
+To use, specify a fractional QP:
+the first part of the sequence will use $qpc=floor(QP)$ in the following
+calculation and PPS-0; the second part of the sequence will use $qpc=ceil(QP)$
+and PPS-1. The $chromaQp$ that is then stored in the PPS is given as:
+$clip(round(WCGPPSXXQpScale*baseCQp)+XXQpOffset)$ where $baseCQp=(WCGPPSChromaQpScale*qpc+WCGPPSChromaQpOffset)$.
+Note that the slices will continue to have a delta QP applied.
+\\
+
+\Option{WCGPPSChromaQpScale} &
+\Default{0.0} &
+Scale parameter for the linear chroma QP offset mapping used for WCG content.
+\\
+
+\Option{WCGPPSChromaQpOffset} &
+\Default{0.0} &
+Offset parameter for the linear chroma QP offset mapping used for WCG content.
+\\
+
+\Option{WCGPPSCbQpScale}%
+\Option{WCGPPSCrQpScale} &
+\Default{1.0} &
+Per chroma component QP scale factor depending on capture and representation color space.
+For Cb component with BT.2020 container use 1.14; for BT.709 material and 1.04 for P3 material.
+For Cr component with BT.2020 container use 1.79; for BT.709 material and 1.39 for P3 material.
+\\
+
 \Option{SliceChromaQPOffsetPeriodicity} &
 \Default{0} &
 Defines the periodicity for inter slices that use the slice-level chroma QP offsets, as defined by SliceCbQpOffsetIntraOrPeriodic and SliceCrQpOffsetIntraOrPeriodic. A value of 0 disables the periodicity. It is intended to be used in low-delay configurations where an regular intra period is not defined.
