--- a/doc/software-manual.tex
+++ b/doc/software-manual.tex
@@ -1011,6 +1011,12 @@ picture.
 Specifies the size of the cyclic GOP structure.
 \\
 
+\Option{ReWriteParamSetsFlag} &
+%\ShortOption{\None} &
+\Default{0} &
+When enabled, VPS, SPS and PPS are repeated in front of every IRAP picture.
+\\
+
 \Option{Frame\emph{N}} &
 %\ShortOption{\None} &
 \Default{\NotSet} &
